# cryptobot

./: Coin.py  Dockerfile-fetcher  Fetcher.py  Makefile  README.md  config.py  docker-compose.yaml  fetch_data.py  main.py  pyproject.toml  utils.py  visuals.py
bots/: Bot.py  RandomBot.py
db/bot/: ETH-EUR__MaBot.csv
db/timeseries/: ETH-BLA.csv  ETH-EUR.csv
